--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
         <option value="">Select Year</option>
         <option value="1">1st Year</option>
         <option value="2">2nd Year</option>
+        <option value="3">3rd Year</option>
+        <option value="4">4th Year</option>
       </select>
 
       <label>Semester:</label>
