--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PrepEasy</title>
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?" />
+  <link rel="icon" href="new-favicon.png" type="image/png">
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
